--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1"
   },
   "name": "rest-api-",
   "version": "1.0.0",
